# hawarma

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  SOP.md  TUI_README.md  analyze_real_game.py  demo.py  main.py  manual_test.py  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh  tui.py
configs/: config.yaml
data/: future_recipes.json  recipe_timeout.csv  recipes.json  reward.csv
docs/: ARCHITECTURE.md  agent_architecture.md  agent_design.md  agent_integration.md  agent_strategy.md  architecture_blueprint.md  architecture_redesign.md  assembly_deadlock_analysis.md  assembly_verification_analysis.md  bridge_architecture.md  code_review.md  dessert_station.md  dev.md  development_workflow.md  env_bridge.md  env_simulator.md  env_simulator_debug.md  env_simulator_impl.md  game_mechanics.md  game_rule_coverage_gaps.md  game_rules.md  glossary.md  optimization_proposal.md  order_state_sync.md  order_sync_analysis.md  playground_plan.md  real_game_implementation.md  recipe_selection_design.md  recipe_selection_summary.md  recipe_selection_usage.md  tui_guide.md  tui_summary.md
experiments/: ARCHITECTURE.md  README.md  all_strategies_bench.csv  benchmark_results.csv  cpm_enhanced_bench.csv  final_bench.csv
hawarma/: ARCHITECTURE.md  actions.py  app.py  config.py  cook_system.py  env_bridge.py  env_simulator.py  env_simulator_types.py  helper.py  logging_setup.py  models.py  order_detector.py  recipes.py  state.py  ui_operation_manager.py
playground/: ARCHITECTURE.md  README.md  __init__.py  __main__.py  cli.py  env_simulator.py  env_simulator_types.py
scripts/: base_strategies.py  benchmark_agent.py  benchmark_utils.py  gen_recipe_timeout.py  simulate_full_game.py  simulate_game.py  test_agent.py  update_reward_csv.py
tests/: ARCHITECTURE.md  run_timer_detection_test.py  test_agent_proactive_cooking.py  test_assembly_station_concurrency.py  test_assembly_verifier.py  test_capture_speed.py  test_dessert_detection.py  test_dessert_strategy.py  test_detect_order.py  test_device_methods.py  test_device_methods_strict.py  test_env_bridge.py  test_env_simulator.py  (+19 more)
(+159 files in other folders)
