[project]
name = "hawarma-auto"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "airtest",
    "loguru>=0.7.3",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "questionary>=2.1.0",
    "textual>=0.40.0",
]

[project.scripts]
hawarma-tui = "tui:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv.sources]
airtest = { git = "https://github.com/ChanningWang2018/Airtest.git", rev = "master" }
