[project]
name = "hawarma-auto"
version = "0.2.0"
description = "Cooking game automation agent with image detection and strategy optimization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["game-automation", "airtest", "agent"]
dependencies = [
    "airtest",
    "loguru>=0.7.3",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "questionary>=2.1.0",
    "textual>=0.40.0",
]

[project.scripts]
hawarma = "hawarma.cli:main"
hawarma-tui = "hawarma.tui:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv.sources]
airtest = { git = "https://github.com/ChanningWang2018/Airtest.git", rev = "master" }
